spring-tx analysis - complete case